bit of changes made

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
                 <p class="animate__bounceInRight ">
                     If you can’t decide which kind of food you’re in the mood for, Vegan Plate, dishing out vegan takes on all types of cuisines. From sweet potato gnocchi (broccoli rabe, wild mushrooms, garlic sage, white wine butter sauce) to jerk tofu and yam burgers
                     (grilled Jamaican spiced tofu, yam, pickled cabbage, caramelized onions and tomato), Plum dishes out a variety of flavors—all plant-based, of course. The restaurant also boasts two take-out counters across town (one by the bistro and
-                    another in the Seattle Center Armory), a treat shop serving vegan brownies, ice cream and cookies and a food truck slinging out sandwiches and salads. <br> We welcome you to sit back, unwind and appreciate the lovely
-                    sights and hints of the ocean while our best gourmet expert sets you up a scrumptious dinner utilizing the best and freshest ingredients.’Vegan Plate’ ‘s legacy comes from The parent Restaurant which was built up in 1963. ‘Vegan Plate’
-                    was worked for people in general and has advanced into a combination between exquisite chic and contemporary fine charge. </p>
+                    another in the Seattle Center Armory), a treat shop serving vegan brownies, ice cream and cookies and a food truck slinging out sandwiches and salads.</p>
+                <p class="animate__bounceInRight second-p ">
+                    We welcome you to sit back, unwind and appreciate the lovely sights and hints of the ocean while our best gourmet expert sets you up a scrumptious dinner utilizing the best and freshest ingredients.’Vegan Plate’ ‘s legacy comes from The parent Restaurant
+                    which was built up in 1963. ‘Vegan Plate’ was worked for people in general and has advanced into a combination between exquisite chic and contemporary fine charge. </p>
             </div>
 
         </div>
@@ -137,16 +138,15 @@
 
 
                 <div class="menu-slider active-menu-slider my-right">
-                    <div class="title-container">
+                    <div class="title-container ">
                         <div class="image-container ">
-                            <img class="image " src="images/rolande-pg-SIO_bOZoStA-unsplash (1).jpg " alt="image ">
+                            <img class="image " src="images/Best-Boston-Vegan-Food-sider-mesame.jpg " alt="image ">
                             <div class="middle ">
-                                <div class="textt ">$8.59</div>
+                                <div class="textt ">$5.99</div>
                             </div>
                         </div>
-
-                        <h3 class="h3 ">Veggie Burgers</h3>
-                        <p class="text-right ">Loremm e voluptatibus distinctio minima quae, repellendus reprehenderit cum hic perferendis blanditiis repudiandae. Sunt expedita ipsum repellat nemo, nam saorem.</p>
+                        <h3 class="h3 "> Avocado Salad</h3>
+                        <p class="text-right ">Lorem Ipsum is simply dummy text of the printing and imply dummy the printing a typesetting industry. Lorem.</p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -171,14 +171,14 @@
                     </div>
                 </div>
                 <div class="menu-slider  my-right">
-                    <div class="title-container ">
+                    <div class="title-container">
                         <div class="image-container ">
-                            <img class="image " src="images/Best-Boston-Vegan-Food-sider-mesame.jpg " alt="image ">
+                            <img class="image " src="images/rolande-pg-SIO_bOZoStA-unsplash (1).jpg " alt="image ">
                             <div class="middle ">
-                                <div class="textt ">$5.99</div>
+                                <div class="textt ">$8.59</div>
                             </div>
                         </div>
-                        <h3 class="h3 "> Avocado Salad</h3>
+                        <h3 class="h3 "> Veggie Burger</h3>
                         <p class="text-right ">Lorem Ipsum is simply dummy text of the printing and imply dummy the printing a typesetting industry. Lorem.</p>
                     </div>
                     <div class="title-container ">
