added some responsive again

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
             <div class="left-block ">
                 <span class="menu-span ">menu</span>
                 <h3 class="main-title ">our special meals</h3>
-                <p class="text ">Lorem ipsum sem ipsum dolor sit, dolor sit, a dolor sit, a dolor sit, a amet cosolutt nemo, nam saepe illum consectetur. Est, solutdolorem maiores iure, officia laborum perferendis odio aspernatur, perspiciatis unde officiis neque? Rerum,
-                    voluptates placeat.
+                <p class="text ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione cumque voluptatum, et itaque exercitationem inventore.?
                 </p>
             </div>
             <div class="right-block">
