final final for today

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="#menu" class="my-nav-a">Menu</a>
                     </li>
                     <li class="my-nav-li">
-                        <a href="#gallery" class="my-nav-a">Gallery</a>
+                        <a href="#staff" class="my-nav-a">our staff</a>
                     </li>
                     <li class="my-nav-li">
                         <a href="#contact" class="my-nav-a">Contact Us</a>
@@ -104,7 +104,7 @@
     </section>
     <!-- end slider -->
     <!-- start about us -->
-    <section class="about-us-wraper " id="about ">
+    <section id="about" class="about-us-wraper">
         <h3 class="about-us-title ">about us</h3>
         <span class="about-us-span ">What we offer</span>
         <div class="about-us-container ">
@@ -125,7 +125,7 @@
     </section>
     <!-- end about us -->
     <!-- start menu section -->
-    <section class="menu " id="menu ">
+    <section class="menu " id="menu">
         <div class="content-container ">
             <div class="left-block ">
                 <span class="menu-span ">menu</span>
@@ -245,6 +245,7 @@
 
 
 
+    <!-- ak ikneba staff information  warmoghebuli bazidannnn-->
 
 
 
@@ -254,14 +255,7 @@
 
 
 
-
-
-
-
-
-
-
-    <section class="contact-container-second " id="contact ">
+    <section id="contact" class="contact-container-second">
         <div class="contact-us ">
             <form action="# ">
                 <label for="customerName ">name <em>&#x2a;</em></label><input class="input " id="customerName " name="customerName " required=" " type="text " />
@@ -311,14 +305,11 @@
             </div>
         </div>
     </section>
-    <footer class="footer ">
+    <footer class="footer">
         <div class="footer-container ">
             <div class="left-container ">
                 <h3 class="footer-h3 ">vegan plate</h3>
                 <p class="paragraph ">Our restaurant is an image of quality and profesionalism combined with hard work and precision. You can expect only the best services from our staff.</p>
-
-
-
                 <div class="for-icon ">
                     <div class="social-icon">
                         <a href="https://www.facebook.com/"><i class="fab fa-facebook-f "></i></a>
@@ -331,9 +322,6 @@
                     </div>
                 </div>
             </div>
-
-
-
             <div class="right-container ">
                 <div class="raw1 ">
                     <h4>Useful links</h4>
