--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <h3 class="h3 "> Avocado Salad</h3>
-                        <p class="text-right ">Lorem Ipsum is simply dummy text of the printing and imply dummy the printing a typesetting industry. Lorem.</p>
+                        <p class="text-right ">Lorem Ipsum is simply dummy text of the printing and imply esetting industry. Lorem.</p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -155,8 +155,7 @@
                             </div>
                         </div>
                         <h3 class="h3 ">Thai Salad</h3>
-                        <p class="text-right ">Lorem consnditiis repudiandae. Sunt expedita ipsum repellat consectetur. Est, soluttext of industry. Lorem.
-                        </p>
+                        <p class="text-right ">Lorem consnditiis repudiandae. Sunt expedita ipsum repellat</p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -178,7 +177,7 @@
                             </div>
                         </div>
                         <h3 class="h3 "> Veggie Burger</h3>
-                        <p class="text-right ">Lorem Ipsum is simply dummy text of the printing and imply dummy the printing a typesetting industry. Lorem.</p>
+                        <p class="text-right ">Lorem Ipsum is simply dummy text of the printing and imply dummy</p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -188,7 +187,7 @@
                             </div>
                         </div>
                         <h3 class="h3 ">Pizza</h3>
-                        <p class="text-right ">Lorem Ipsum is of the printing is simply dummy text of the is simply dummy text of the imply dummy the printing aimply dummy the printing atypesetting industry. Lorem.</p>
+                        <p class="text-right ">Lorem Ipsum is of the printing is simply dummy text of the is simply dummy</p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -198,7 +197,7 @@
                             </div>
                         </div>
                         <h3 class="h3 ">orange Salad</h3>
-                        <p class="text-right "> text of the printing and is simply dummy text of the imply dummy the printing atypesetting industry. Lorem.</p>
+                        <p class="text-right "> text of the printing and is simply dummy text of the imply dummy the printing .</p>
                     </div>
                 </div>
                 <div class="menu-slider  my-right">
@@ -210,7 +209,7 @@
                             </div>
                         </div>
                         <h3 class="h3 ">golden pizza</h3>
-                        <p class="text-right ">Lorem Ipsum is simply is simply dummy text of the is simply dummy text of the dummy text industry. Lorem.</p>
+                        <p class="text-right ">Lorem Ipsum is simply is simply dummy text of the is simply dummy text of </p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -220,7 +219,7 @@
                             </div>
                         </div>
                         <h3 class="h3 ">vegan toast</h3>
-                        <p class="text-right ">Lorem Ipsum is simply dummy is simply dummy text of the text of the printing and typesetting industry. Lorem.</p>
+                        <p class="text-right ">Lorem Ipsum is simply dummy is simply dummy text of the text of the printing</p>
                     </div>
                     <div class="title-container ">
                         <div class="image-container ">
@@ -230,7 +229,7 @@
                             </div>
                         </div>
                         <h3 class="h3 ">avocado toast</h3>
-                        <p class="text-right ">Lorem Ipsum is simply is simply dummy text of the dummy text of the printing and typesetting industry. Lorem.</p>
+                        <p class="text-right ">Lorem Ipsum is simply is simply dummy text of the dummy text of the printing.</p>
                     </div>
                 </div>
 
