--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             <i> provide all the information about your issue you can.</i>
                         </span>
                 <div class="button-container">
-                    <button id="customerOrder" type="button">SUBMIT</button>
+                    <button id="customerOrder" type="submit">SUBMIT</button>
                 </div>
                 <p id="form-responce"> </p>
             </form>
@@ -283,24 +283,24 @@
                     <i class="fa fa-envelope " aria-hidden="true "></i>
                 </div>
                 <h5>Email</h5>
-                <a href="mailto:someone@yoursite.com " class="par ">example@yahoo.com</a>
-                <a href="mailto:someone@yoursite.com " class="par ">exampleemail2@yahoo.com</a>
+                <a href="mailto:someone@yoursite.com " class="par">example@gmail.com</a>
+                <a href="mailto:someone@yoursite.com " class="par">examplemail2@gmail.com</a>
             </div>
             <div class="contact-container ">
                 <div class="icon ">
                     <i class="fa fa-phone " aria-hidden="true "></i>
                 </div>
                 <h5>phone</h5>
-                <a href="tel:+0 320 422 4254 " class="par ">+0 320 422 4254</a>
-                <a href="tel:+0 320 422 4254 " class="par ">+0 320 422 4254</a>
+                <a href="tel:+0 320 422 4254 " class="par">+0 320 422 4254</a>
+                <a href="tel:+0 320 422 4254 " class="par">+0 320 422 4254</a>
             </div>
             <div class="contact-container ">
                 <div class="icon ">
                     <i class="fa fa-map-marker " aria-hidden="true "></i>
                 </div>
                 <h5>location</h5>
-                <p class="par ">Main Str Chicago Ilinois</p>
-                <p class="par "> Main Street New York City</p>
+                <p class="par">Vaja Phshavela Avenue N3</p>
+                <p class="par">Kavtaradze Street N11</p>
             </div>
         </div>
     </section>
@@ -345,9 +345,9 @@
                 <div class="raw3 ">
                     <h4>contact info</h4>
                     <ul class="footer-ul">
-                        <li class="ul-li links1 "><a href="mailto:someone@yoursite.com ">example@yahoo.com</a></li>
+                        <li class="ul-li links1 "><a href="mailto:someone@yoursite.com " class="no-cap">example@gmail.com</a></li>
                         <li class="ul-li links2 "><a href="tel:+0 320 422 4254 ">+0 320 422 4254</a></li>
-                        <li class="ul-li links3 "><a href="# ">Main Str Chicago Ilinois</a></li>
+                        <li class="ul-li links3 "><a href="# ">Kavtaradze Street N11</a></li>
                     </ul>
                 </div>
             </div>
