--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="menu-slider  my-right">
                     <div class="title-container">
                         <div class="image-container ">
-                            <img class="image " src="images/rolande-pg-SIO_bOZoStA-unsplash (1).jpg " alt="image ">
+                            <img class="image " src="images/rolande-pg-SIO_bOZoStA-unsplash(1).jpg " alt="image ">
                             <div class="middle ">
                                 <div class="textt ">$8.59</div>
                             </div>
@@ -257,46 +257,45 @@
     <section id="contact" class="contact-container-second">
         <div class="contact-us ">
             <form action="# ">
-                <label for="customerName ">name <em>&#x2a;</em></label><input class="input " id="customerName " name="customerName " required=" " type="text " />
-                <label for="customerEmail ">email <em>&#x2a;</em></label><input class="input " id=" customerEmail " name="customerEmail " required=" " type="email " />
-                <label for="customerPhone ">phone</label><input id="customerPhone " class="input " name="customerPhone " pattern="[0-9]{3}-[0-9]{3}-[0-9]{4} " type="tel " />
-                <label for="orderNumber ">order number</label><input class="input " id="orderNumber " name="orderNumber " type="text " />
-                <label for="customerNote ">your message <em>&#x2a;</em>
-                        </label><textarea id="customerNote " name="customerNote " required=" " rows="4 "></textarea>
-                <span class="i-text ">
+                <label for="customerName">name <em>&#x2a;</em></label><input class="input" id="customerName" name="customerName" type="text" required />
+                <label for="customerEmail">email <em>&#x2a;</em></label><input class="input" id="customerEmail" name="customerEmail " type="email" required />
+                <label for="customerPhone">phone</label><input id="customerPhone" class="input" name="customerPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4} " type="tel" />
+                <label for="orderNumber">order number</label><input class="input" id="orderNumber" name="orderNumber" type="text" />
+                <label for="customerNote">your message <em>&#x2a;</em>
+                        </label><textarea id="customerNote" name="customerNote" rows="4" required></textarea>
+                <span class="i-text">
                             <i> provide all the information about your issue you can.</i>
                         </span>
                 <div class="button-container">
                     <button id="customerOrder" type="submit">SUBMIT</button>
                 </div>
-                <p id="form-responce"> </p>
+                <p id="form-responce"></p>
             </form>
         </div>
         <div class="for-map ">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2974.723247486682!2d44.807062015438326!3d41.79117767922917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40446c4a61b009b1%3A0x434b15fff56fe07a!2sKhizabarva%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1628116031231!5m2!1sen!2sge "
-                width="100% " height="550 " style="border:0; " allowfullscreen=" " loading="lazy "></iframe>
-
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.967869162499!2d44.72693001543618!3d41.72121217923497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730d245a64e9%3A0x11b264db98c582b3!2sPetre%20Kavtaradze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1628713870562!5m2!1sen!2sge"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="icon-container ">
-            <div class="contact-container ">
+        <div class="icon-container">
+            <div class="contact-container">
                 <div class="icon ">
-                    <i class="fa fa-envelope " aria-hidden="true "></i>
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
                 <h5>Email</h5>
-                <a href="mailto:someone@yoursite.com " class="par">example@gmail.com</a>
-                <a href="mailto:someone@yoursite.com " class="par">examplemail2@gmail.com</a>
+                <a href="mailto:someone@yoursite.com" class="par">example@gmail.com</a>
+                <a href="mailto:someone@yoursite.com" class="par">examplemail2@gmail.com</a>
             </div>
-            <div class="contact-container ">
+            <div class="contact-container">
                 <div class="icon ">
-                    <i class="fa fa-phone " aria-hidden="true "></i>
+                    <i class="fa fa-phone" aria-hidden="true"></i>
                 </div>
                 <h5>phone</h5>
-                <a href="tel:+0 320 422 4254 " class="par">+0 320 422 4254</a>
-                <a href="tel:+0 320 422 4254 " class="par">+0 320 422 4254</a>
+                <a href="tel:+03204224254" class="par">+0 320 422 4254</a>
+                <a href="tel:+03204224254" class="par">+0 320 422 4254</a>
             </div>
             <div class="contact-container ">
                 <div class="icon ">
-                    <i class="fa fa-map-marker " aria-hidden="true "></i>
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
                 </div>
                 <h5>location</h5>
                 <p class="par">Vaja Phshavela Avenue N3</p>
@@ -314,10 +313,10 @@
                         <a href="https://www.facebook.com/"><i class="fab fa-facebook-f "></i></a>
                     </div>
                     <div class="social-icon">
-                        <a href=""> <i class="fab fa-twitter "></i></a>
+                        <a href="#"> <i class="fab fa-twitter "></i></a>
                     </div>
                     <div class="social-icon">
-                        <a href=""> <i class="fab fa-google-plus-g "></i></a>
+                        <a href="#"> <i class="fab fa-google-plus-g "></i></a>
                     </div>
                 </div>
             </div>
@@ -326,28 +325,28 @@
                     <h4>Useful links</h4>
                     <ul class="footer-ul">
                         <li class="ul-li "><a href="blogs ">Blogs</a></li>
-                        <li class="ul-li "><a href="# ">Rooms</a></li>
-                        <li class="ul-li "><a href="# ">Gift Card</a></li>
-                        <li class="ul-li "><a href="# ">Testimonials</a></li>
-                        <li class="ul-li "><a href="# ">galery</a></li>
+                        <li class="ul-li "><a href="#">Rooms</a></li>
+                        <li class="ul-li "><a href="#">Gift Card</a></li>
+                        <li class="ul-li "><a href="#">Testimonials</a></li>
+                        <li class="ul-li "><a href="#">galery</a></li>
                     </ul>
                 </div>
                 <div class="raw2 ">
                     <h4>Privacy</h4>
                     <ul class="footer-ul">
-                        <li class="ul-li "><a href="# ">home</a></li>
-                        <li class="ul-li "><a href="# ">about us</a></li>
-                        <li class="ul-li "><a href="# ">menu</a></li>
-                        <li class="ul-li "><a href="# ">gallery</a></li>
-                        <li class="ul-li "><a href="# ">contact us</a></li>
+                        <li class="ul-li "><a href="#">home</a></li>
+                        <li class="ul-li "><a href="#">about us</a></li>
+                        <li class="ul-li "><a href="#">menu</a></li>
+                        <li class="ul-li "><a href="#">gallery</a></li>
+                        <li class="ul-li "><a href="#">contact us</a></li>
                     </ul>
                 </div>
                 <div class="raw3 ">
                     <h4>contact info</h4>
                     <ul class="footer-ul">
-                        <li class="ul-li links1 "><a href="mailto:someone@yoursite.com " class="no-cap">example@gmail.com</a></li>
-                        <li class="ul-li links2 "><a href="tel:+0 320 422 4254 ">+0 320 422 4254</a></li>
-                        <li class="ul-li links3 "><a href="# ">Kavtaradze Street N11</a></li>
+                        <li class="ul-li links1 "><a href="mailto:someone@yoursite.com" class="no-cap">example@gmail.com</a></li>
+                        <li class="ul-li links2 "><a href="tel:+03204224254">+0 320 422 4254</a></li>
+                        <li class="ul-li links3 "><a href="#">Kavtaradze Street N11</a></li>
                     </ul>
                 </div>
             </div>
@@ -362,7 +361,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/slider-main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 
