--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </div>
         <div class="for-map ">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.967869162499!2d44.72693001543618!3d41.72121217923497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730d245a64e9%3A0x11b264db98c582b3!2sPetre%20Kavtaradze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1628713870562!5m2!1sen!2sge"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                width="600" height="450" style="border:0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="icon-container">
             <div class="contact-container">
