--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="left-block ">
                 <span class="menu-span ">menu</span>
                 <h3 class="main-title ">our special meals</h3>
-                <p class="text-menu ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione cumque voluptatum, et itaque exercitationem inventore.?
+                <p class="text-menu">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione cumque voluptatum, et itaque exercitationem inventore.?
                 </p>
             </div>
             <div class="right-block">
@@ -241,7 +241,19 @@
         </div>
     </section>
     <!-- end menu  -->
-    <!-- start contact -->
+
+
+
+    <!-- ak ikneba staff information  warmoghebuli bazidannnn-->
+
+
+
+
+
+
+
+
+
     <section id="contact" class="contact-container-second">
         <div class="contact-us ">
             <form action="# ">
@@ -291,30 +303,6 @@
             </div>
         </div>
     </section>
-    <!-- end contact -->
-    <!-- start our staff -->
-    <section class="section-staff" id="staff">
-        <h2 class="our-team">our team</h2>
-        <div class="personal_section">
-            <div id="sheff">
-                <img id="img-sheff" src="" alt="">
-                <div class="person_info">
-                    <h1 id="sheff_full_name"></h1>
-                    <a id="sheff_mail" href=""></a>
-                </div>
-            </div>
-
-            <div id="cook">
-                <img id="img-cook" src="" alt="">
-                <div class="person_info">
-                    <h1 id="cook_full_name"></h1>
-                    <a id="cook_mail" href=""></a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end our staff -->
-    <!-- start footer -->
     <footer class="footer">
         <div class="footer-container ">
             <div class="left-container ">
@@ -364,7 +352,6 @@
             </div>
         </div>
     </footer>
-    <!-- end-footer -->
     <!--  JS -->
     <script src="js/my-script.js"></script>
     <script src="js/jquery.min.js"></script>
