checking responsive and others

--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     <link rel="stylesheet" href="css/slider/owl.carousel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="icon" href="images/f923f10566af77c26beadfb3bf1f6624_logo.png">
-
-
 </head>
 
 <body>
@@ -241,19 +239,7 @@
         </div>
     </section>
     <!-- end menu  -->
-
-
-
-    <!-- ak ikneba staff information  warmoghebuli bazidannnn-->
-
-
-
-
-
-
-
-
-
+    <!-- start contact section -->
     <section id="contact" class="contact-container-second">
         <div class="contact-us ">
             <form action="# ">
@@ -274,7 +260,7 @@
         </div>
         <div class="for-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.967869162499!2d44.72693001543618!3d41.72121217923497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730d245a64e9%3A0x11b264db98c582b3!2sPetre%20Kavtaradze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1628713870562!5m2!1sen!2sge"
-                height="550" style="border:0; width: 100%;" allowfullscreen="" loading="lazy"></iframe>
+                height="450" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" class="map-for-responsive"></iframe>
         </div>
         <div class="icon-container">
             <div class="contact-container">
@@ -303,6 +289,30 @@
             </div>
         </div>
     </section>
+    <!-- end contact section -->
+    <!-- start our staff -->
+    <section class="section-staff" id="staff">
+        <h2 class="our-team">our team</h2>
+        <div class="personal_section">
+            <div id="sheff">
+                <img id="img-sheff" src="" alt="">
+                <div class="person_info">
+                    <h1 id="sheff_full_name"></h1>
+                    <a id="sheff_mail" href=""></a>
+                </div>
+            </div>
+
+            <div id="cook">
+                <img id="img-cook" src="" alt="">
+                <div class="person_info">
+                    <h1 id="cook_full_name"></h1>
+                    <a id="cook_mail" href=""></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end our staff -->
+    <!-- start footer -->
     <footer class="footer">
         <div class="footer-container ">
             <div class="left-container ">
@@ -352,6 +362,7 @@
             </div>
         </div>
     </footer>
+    <!-- end footer -->
     <!--  JS -->
     <script src="js/my-script.js"></script>
     <script src="js/jquery.min.js"></script>
