checked one more time

--- a/index.html
+++ b/index.html
@@ -295,15 +295,14 @@
         <h2 class="our-team">our team</h2>
         <div class="personal_section">
             <div id="sheff">
-                <img id="img-sheff" src="" alt="">
+                <img id="img-sheff" src="#" alt="image">
                 <div class="person_info">
                     <h1 id="sheff_full_name"></h1>
                     <a id="sheff_mail" href=""></a>
                 </div>
             </div>
-
             <div id="cook">
-                <img id="img-cook" src="" alt="">
+                <img id="img-cook" src="#" alt="image">
                 <div class="person_info">
                     <h1 id="cook_full_name"></h1>
                     <a id="cook_mail" href=""></a>
